Add confirm registration model

--- a/cody/ClientApp/src/pages/email_pages/confirm_registration.html
+++ b/cody/ClientApp/src/pages/email_pages/confirm_registration.html
@@ -13,7 +13,7 @@
             </div>
             <div>
                 <h1 class="center-text no-margin">
-                    Benvuntuo in cody!
+                    Benvenuto in cody!
                 </h1>
                 <p class="center-text">
                     Prima di iniziare a scoprire cody, devi confermare la tua email!
@@ -22,12 +22,12 @@
                     Confermando l'email potrai utilizzare tutte le funzioni di cody ed entrare in contatto con gli altri utenti.
                 </p>
                 <div class="center-text button-box">
-                    <a class="button primary-bg" href="">
+                    <a class="button primary-bg" href="{0}">
                         Verifica la tua email
                     </a>
                 </div>
                 <p class="center-text small-text">
-                    Se non hai creato l'accuont scrivici un email a <a href="">info@cody.com</a>
+                    Se non hai creato tu l'account inviaci una mail a <a href="mailto: info@cody.com">info@cody.com</a>
                 </p>
             </div>
         </div>
