--- a/cody/Assets/validate_email_complex_model.html
+++ b/cody/Assets/validate_email_complex_model.html
@@ -165,7 +165,7 @@
                     <!-- COPY -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Prima di iniziare ad espoloreare cody, devi confemrare la tua email.</p>
+                            <p style="margin: 0;">Hey {username}! Prima di iniziare ad esplorare cody devi confemrare la tua email</p>
                         </td>
                     </tr>
                     <!-- BULLETPROOF BUTTON -->
@@ -177,8 +177,8 @@
                                         <table border="0" cellspacing="0" cellpadding="0">
                                             <tr>
                                                 <td align="center" style="border-radius: 3px;" bgcolor="#3366ff">
-                                                    <a href="{0}" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #3366ff; display: inline-block;">
-                                                        Conferma Account
+                                                    <a href="{validationUrl}" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #3366ff; display: inline-block;">
+                                                        Conferma Email
                                                     </a>
                                                 </td>
                                             </tr>
@@ -191,13 +191,13 @@
                     <!-- COPY -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 0px 30px 0px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Se non funziona copia e incolla il seguente link nel tuo browser:</p>
+                            <p style="margin: 0;">Se il bottone non funziona, incolla il seguente link nel tuo browser:</p>
                         </td>
                     </tr>
                     <!-- COPY -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;"><a href="http://litmus.com" target="_blank" style="color: #3366ffabove;">{0}</a></p>
+                            <p style="margin: 0;"><a href="{validationUrl}" target="_blank" style="color: #3366ffabove;">{validationUrl}</a></p>
                         </td>
                     </tr>
                     <!-- COPY -->
