Rename email validation to verification

--- a/cody/Assets/verify_email_complex_model.html
+++ b/cody/Assets/verify_email_complex_model.html
@@ -177,7 +177,7 @@
                                         <table border="0" cellspacing="0" cellpadding="0">
                                             <tr>
                                                 <td align="center" style="border-radius: 3px;" bgcolor="#3366ff">
-                                                    <a href="{validationUrl}" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #3366ff; display: inline-block;">
+                                                    <a href="{verificationUrl}" target="_blank" style="font-size: 20px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; padding: 15px 25px; border-radius: 2px; border: 1px solid #3366ff; display: inline-block;">
                                                         Conferma Email
                                                     </a>
                                                 </td>
@@ -197,7 +197,7 @@
                     <!-- COPY -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;"><a href="{validationUrl}" target="_blank" style="color: #3366ffabove;">{validationUrl}</a></p>
+                            <p style="margin: 0;"><a href="{verificationUrl}" target="_blank" style="color: #3366ffabove;">{verificationUrl}</a></p>
                         </td>
                     </tr>
                     <!-- COPY -->
