fix loader color changing page

--- a/cody/ClientApp/public/index.html
+++ b/cody/ClientApp/public/index.html
@@ -28,7 +28,7 @@
     -->
     <script type="text/javascript" src="index.js"></script>
     <script>
-      color();
+      loaderThemeSelection();
     </script>
     <title>cody</title>
   </head>
