--- a/cody/ClientApp/public/index.html
+++ b/cody/ClientApp/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/loaderThemeSelection.js"></script>
     <script>
       loaderThemeSelection();
     </script>
