--- a/cody/ClientApp/public/index.html
+++ b/cody/ClientApp/public/index.html
@@ -6,11 +6,11 @@
     <meta name="theme-color" content="#000000">
     <base href="%PUBLIC_URL%/" />
     <!--
-      manifest.json provides metadata used when your web app is added to the
+      manifest.webmanifest provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css">
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.webmanifest">
     
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png">
     <link rel="shortcut icon" href="%PUBLIC_URL%/icons/cody-sm.png">
