--- a/cody/ClientApp/public/offline.html
+++ b/cody/ClientApp/public/offline.html
@@ -10,12 +10,12 @@
     <script src="/index.js"></script>
   </head>
 
-  <body>
+  <body class="dynamic-background">
     <script>
       init();
     </script>
 
-    <div class="center column dynamic-background">
+    <div class="center column">
       <svg class="illustration" xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 400 300">
         <path
           d="M97.37,53.76C62.6,65.63,36.81,95.71,31.72,132.09c-4.28,30.66,6,64.55,66.23,74.2,117.29,18.78,227.14,24.14,255.18-26.54S372.54,42.26,313,36.65C265.7,32.18,165.28,30.6,97.37,53.76Z"
