Reload page when device comes back online

--- a/cody/ClientApp/public/offline.html
+++ b/cody/ClientApp/public/offline.html
@@ -13,6 +13,10 @@
   <body class="dynamic-background">
     <script>
       init();
+
+      window.addEventListener('online', () => {
+        location.reload();
+      });
     </script>
 
     <div class="center column">
