--- a/cody/Assets/verify_email_complex_model.html
+++ b/cody/Assets/verify_email_complex_model.html
@@ -165,7 +165,7 @@
                     <!-- COPY -->
                     <tr>
                         <td bgcolor="#ffffff" align="left" style="padding: 20px 30px 20px 30px; color: #666666; font-family: 'Lato', Helvetica, Arial, sans-serif; font-size: 18px; font-weight: 400; line-height: 25px;">
-                            <p style="margin: 0;">Hey {username}! Prima di iniziare ad esplorare cody devi confemrare la tua email</p>
+                            <p style="margin: 0;">Hey {username}! Prima di iniziare ad esplorare cody devi confermare la tua email</p>
                         </td>
                     </tr>
                     <!-- BULLETPROOF BUTTON -->
