--- a/cody/ClientApp/public/index.html
+++ b/cody/ClientApp/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate" />
+
     <base href="%PUBLIC_URL%/" />
     <!--
       manifest.webmanifest provides metadata used when your web app is added to the
