--- a/cody/ClientApp/public/error/server_not_available.html
+++ b/cody/ClientApp/public/error/server_not_available.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="/error/error.css">
 
-    <script src="/index.js"></script>
+    <script src="/index.js" async defer></script>
   </head>
 
   <body class="dynamic-background">
